<resources>
    <string name="app_name">PPTest</string>

    <string name="gbr_sign">£%1$s</string>
    <string name="eur_sign">€%1$s</string>
    <string name="usd_sign">$%1$s</string>
    <string name="rub_sign">₽%1$s</string>

    <string name="no_internet">Упс, похоже у вас проблемы с интернетом(</string>
    <string name="alert_message">Вы можете:</string>
    <string name="retry_text">Попробовать снова</string>
    <string name="saved_data_text">Загрузить предыдущие данные</string>
    <string name="close_app_text">Выйти из приложения</string>

    <string name="main_title">Главная</string>
    <string name="valid_thru">VALID THRU</string>
    <string name="your_balance">Your balance</string>
    <string name="history_label">History</string>
    <string name="change_currency">Change currency</string>
    <string name="my_cards_title">Мои карты</string>

</resources>