<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/alertLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_gray">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="40dp"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/noInternetTitle"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/no_internet"
                android:textSize="18sp"
                android:textColor="@color/text_black"/>

            <TextView
                android:id="@+id/retryTitle"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert_message"
                app:layout_constraintTop_toBottomOf="@id/noInternetTitle"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor="@color/text_black"/>

            <Button
                android:id="@+id/retryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retry_text"
                app:layout_constraintTop_toBottomOf="@id/retryTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                app:cornerRadius="20dp"
                android:background="@color/light_gray"/>

            <Button
                android:id="@+id/savedData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saved_data_text"
                app:layout_constraintTop_toBottomOf="@id/retryButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                app:cornerRadius="20dp"
                android:background="@color/light_gray"/>

            <Button
                android:id="@+id/closeAppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close_app_text"
                app:layout_constraintTop_toBottomOf="@id/savedData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                app:cornerRadius="20dp"
                android:background="@color/light_gray"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>